# haskell_luzne_zadanka

./: .gitignore  README.md
BS_wJ/: README.md  matrix_multip.hs
BS_wJ/bat_and_ball/: README.md  bat_and_ball.hs
BS_wJ/bile/: README.md  bile.hs
BS_wJ/camel_case/: README.md  camel_case.hs
BS_wJ/matrix_multip/: README.md  matrix_multip.hs
BS_wJ/pascals_triangle/: README.md  pascals_triangle.hs
BS_wJ/progress_bar/: README.md  progress_bar.hs
BS_wJ/recursion/: README.md  recursion.hs
BS_wJ/toothpaste/: README.md  toothpaste.hs
book1/: README.md
book1/ch01/: README.md
book1/ch02/: README.md
book1/ch03/: README.md  reverse.hs
book1/ch04/: README.md  main.hs
book1/ch05/: README.md  main.hs
book1/ch06/: README.md  doesItTypecheck.hs  eqInstances.hs  typeKwonDoTwo.hs
book1/ch07/: README.md  anonymous.hs  arith4.hs  casePractice.hs  letsWriteCode.hs  varietyPack.hs
book1/ch08/: README.md  dividedBy.hs  mccarthy91.hs  recursion.hs  wordNumber.hs
book1/ch09/: README.md  ciphers.hs  enumFromTo.hs  filtering.hs  squareCube.hs  standardFunctions.hs  theFearfulSymmetry.hs  zipping.hs
book1/ch14/ciphers/: Caesar.hs  Test.hs  Vigenere.hs  ciphers.cabal
book2/: README.md
book2/ch12/: Task1.hs  (+1 more)
book3/: README.md  ch01.org  ch02.org  ch03.org
book4/: README.md
part1_13_03_2021/: README.md
part2_15_03_2021/: README.md
part3_09_04_2021/: README.md
part4_24_06_2021/: README.md
part5_25_07_2021/: README.md
part6_17_11_2021/: README.md  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
part7_15_01_2022/: README.md  Task1.hs
ws1/: README.md
(+218 files in other folders)
